--- a/index.html
+++ b/index.html
@@ -46,27 +46,33 @@
 		<!-- Currently reading -->
 		<h2 class="currently">Currently Reading:</h2>
 		<div class="mobileshow">
-			<p class="note">(Tap on a book cover to reveal it's description).</p> 	
+			<p class="note">*Tap on a book cover to reveal it's description*. Book descriptions were taken from goodreads.com and en.wikipedia.org. Click on the book title to read more. Reviews are my own.  </p> 	
 		</div> 
 		<div id="boxes">	
 			<div id="leftbook">
-				<img src="img2/aconjuringoflight.jpeg" class="leftbookimg">
-				<p class="leftbookcap">
-					<em>A Conjuring of Light</em>
+				<img src="img2/hiddenpotential.jpeg" class="leftbookimg">
+				<a class = "a2" href = "https://www.goodreads.com/book/show/157095669-hidden-potential?ref=nav_sb_ss_1_13" target="_blank"> <p class="leftbookcap">
+					<em>Hidden Potential: The Science of Achieving Greater Things</em>
+				</p>
+				</a>
 				<p class="leftbookdes">
-					"The precarious equilibrium among four Londons has reached its breaking point. Once brimming with the red vivacity of magic, darkness casts a shadow over the Maresh Empire, leaving a space for another London to rise."
+					"Hidden Potential offers a new framework for raising aspirations and exceeding expectations. Adam Grant weaves together groundbreaking evidence, surprising insights, and vivid storytelling that takes us from the classroom to the boardroom, the playground to the Olympics, and underground to outer space."
 				</p>
 			</div>
 			<div id="rightbook">
-				<img src="img2/thesongofthecell.jpeg"  class="rightbookimg">
-				<p class="rightbookcap"><em>The Song of the Cell: An Exploration of Medicine and the New Human </em></p>
-				<p class="rightbookdes">"In an account both lyrical and capacious, Mukherjee takes us through an evolution of human understanding: from the seventeenth-century discovery that humans are made up of cells to our cutting-edge technologies for manipulating and deploying cells for therapeutic purposes."</p>
+				<img src="img2/theheroofages.jpeg"  class="rightbookimg">
+				<a class="a2" href="https://www.goodreads.com/book/show/2767793-the-hero-of-ages?from_search=true&from_srp=true&qid=Ntgx0HPKk3&rank=1" target="_blank">
+				<p class="rightbookcap"><em>Mistborn: The Hero of Ages </em></p>
+			</a>
+				<p class="rightbookdes">"***Description contains spoilers for previous book in the series***To end the Final Empire and restore freedom, Vin killed the Lord Ruler. But as a result, the Deepness—the lethal form of the ubiquitous mists—is back, along with increasingly heavy ashfalls and ever more powerful earthquakes. Humanity appears to be doomed"
+				</p>
 
 			</div>	
 		</div>
 
 		<!-- Top Picks -->
 		<br>
+
 		<h2 class="toppicks">My Top Picks:</h2>
 		
 
@@ -74,7 +80,7 @@
 			<div id="leftbox">
 				
 				<img src="img2/agameofthrones.jpeg">
-				<p class = "gamecap"><em>A Game of Thrones</em></p>
+				<a class="a2" href="https://www.goodreads.com/book/show/13496.A_Game_of_Thrones?ref=nav_sb_ss_1_9" target="_blank"><p class = "gamecap"><em>A Game of Thrones</em></p></a>
 				<p class="gamedes">
 					"A Game of Thrones tells an epic tale of honor and treachery, love and vengeful hatred, intrigue and heroism set in a world where summers and winters can last for years, even lifetimes. The story fashions itself around the Starks of Winterfell, a family whose legacy is one of stiff-necked honor."
 				</p>
@@ -92,14 +98,18 @@
 			</div>
 			<div id="leftbox">
 				<img src="img2/julieandme.jpeg">
+				<a class = "a2" href="https://www.goodreads.com/book/show/4966951-julie-and-me-and-michael-owen-makes-three?ref=nav_sb_ss_1_20" target="_blank">
 				<p class = "juliecap"><em>Julie, Me, and Michael Owen Makes Three</em></p>
+				</a>
 				<p class="juliedes">
 					"This is Terry's diary as he tries to cope simultaneously with his first love, the unexpected break-up of  his parent's marriage, and the traumas of the Beautiful Game. A lighthearted, fast-paced, bang-up-to-the-minute, and totally credible account of a 15-year-old boy who worries that he looks like Chris Evans."
 				</p>
 			</div>
 			<div id="leftbox">
 				<img src="img2/killingjoke.jpeg">
+				<a class = "a2" href="https://www.goodreads.com/book/show/96358.Batman?ref=nav_sb_ss_1_16" target="_blank">
 				<p class="jokecap"><em>Batman: The Killing Joke</em></p>
+				</a>
 				<p class="jokedes">
 					"For the first time the Joker's origin is revealed in this tale of insanity and human perseverance. Looking to prove that any man can be pushed past his breaking point and go mad, the Joker attempts to drive Commissioner Gordon insane."
 				</p>
@@ -110,16 +120,18 @@
 			</div>
 			<div id="leftbox">
 				<img src="img2/afuck.jpeg">
-				<p class = "fuckcap"><em>The Subtle Art of Not Giving a Fuck</em></p>
-				<p class="afuckdes">"In this generation-defining self-help guide, a superstar blogger cuts through the crap to show us how to stop trying to be 'positive' all the time so that we can truly become better, happier people."</p>				
+				<a class= "a2" href="https://www.goodreads.com/book/show/28257707-the-subtle-art-of-not-giving-a-f-ck?ref=nav_sb_ss_1_10" target="_blank"><p class = "fuckcap"><em>The Subtle Art of Not Giving a Fuck</em></p>
+				<p class="afuckdes">"In this generation-defining self-help guide, a superstar blogger cuts through the crap to show us how to stop trying to be 'positive' all the time so that we can truly become better, happier people."</p>
+				</a>				
 			</div>
 			<div id ="rightbox">
 				<p class = "afucktext" >Who thought that a book that tells you that you're not special could be so inspiring? As someone who prefers fiction and has never had strong feelings towards self-help books, <em>the Subtle Art of Not Giving a Fuck</em> has somehow found its way into my Top Picks. Mark Manson doesn't hold back when he's telling you that you've spent way too long giving a fuck about everything when you should be reserving your fucks for what truly matters. It's actually a lot better than it sounds, and even if you do feel attacked while reading it, you'll be glad you made it to the end. My favourite chapters were: "The Importance of Saying No" and "You Are Not Special." </p>
 			</div>
 			<div id = "leftbox">
 				<img src="img2/adance.jpeg">
-				<p class="adancecap"><em>A Dance with Dragons</em>
-				<p class="adancedes">"In the aftermath of a colossal battle, the future of the Seven Kingdoms hangs in the balance—beset by newly emerging threats from every direction."</p>				
+				<a class = "a2" href="https://www.goodreads.com/book/show/10664113-a-dance-with-dragons?ref=nav_sb_ss_1_9" target="_blank"><p class="adancecap"><em>A Dance with Dragons</em></p>
+				<p class="adancedes">"In the aftermath of a colossal battle, the future of the Seven Kingdoms hangs in the balance—beset by newly emerging threats from every direction."</p>
+				</a>				
 			</div>
 			</div>
 			<div id="rightbox">
@@ -128,7 +140,9 @@
 
 			<div id = "leftbox">
 				<img src="img2/pooreconomics.jpeg">
-				<p class="pooreconomicscaption"><em>Poor Economics: A Radical Rethinking of the Way to Fight Global Poverty</em>
+				<a class="a2" href="https://www.goodreads.com/book/show/10245602-poor-economics?ref=nav_sb_ss_1_9" target="_blank">
+				<p class="pooreconomicscaption"><em>Poor Economics: A Radical Rethinking of the Way to Fight Global Poverty</em></p>
+				</a>
 				<p class="pooreconomicsdescription">"Why do the poor borrow to save? Why do they miss out on free life-saving immunizations, but pay for unnecessary drugs? In Poor Economics, Abhijit V. Banerjee and Esther Duflo, two award-winning MIT professors, answer these questions based on years of field research from around the world. Poor Economics shows that creating a world without poverty begins with understanding the daily decisions facing the poor."</p>				
 			</div>
 			</div>
@@ -138,7 +152,9 @@
 
 			<div id = "leftbox">
 				<img src="img2/goodeconomicsforhardtimes.jpeg">
-				<p class="goodeconomicscaption"><em>Good Economics for Hard Times: Better Answers to Our Biggest Problems </em>
+				<a class="a2" href="https://www.goodreads.com/book/show/51014619-good-economics-for-hard-times?ref=nav_sb_ss_1_12" target="_blank">
+				<p class="goodeconomicscaption"><em>Good Economics for Hard Times: Better Answers to Our Biggest Problems </em></p>
+			</a>
 				<p class="goodeconomicsdescription">"Good Economics for Hard Times makes a persuasive case for an intelligent interventionism and a society built on compassion and respect and show how economics, when done right, can help us solve the thorniest social and political problems of the day."</p>				
 			</div>
 			</div>
@@ -148,7 +164,10 @@
 
 			<div id = "leftbox">
 				<img src="img2/atomichabits.jpeg">
-				<p class="atomichabitscaption"><em>Atomic Habits: An Easy & Proven Way to Build Good Habits & Break Bad Ones</em>
+				<a class="a2" href="https://www.goodreads.com/book/show/40121378-atomic-habits?ref=nav_sb_ss_1_3"
+				target="_blank">
+				<p class="atomichabitscaption"><em>Atomic Habits: An Easy & Proven Way to Build Good Habits & Break Bad Ones</em></p>
+			</a>
 				<p class="atomichabitsdescription">"Atomic Habits will reshape the way you think about progress and success, and give you the tools and strategies you need to transform your habits--whether you are a team looking to win a championship, an organization hoping to redefine an industry, or simply an individual who wishes to quit smoking, lose weight, reduce stress, or achieve any other goal."</p>				
 			</div>
 			</div>
@@ -158,7 +177,9 @@
 
 			<div id = "leftbox">
 				<img src="img2/sixofcrows.jpeg">
-				<p class="sixofcrowscaption"><em>Six of Crows</em>
+				<a class="a2" href="https://www.goodreads.com/book/show/23437156-six-of-crows?ref=nav_sb_ss_1_10" target="_blank">
+				<p class="sixofcrowscaption" href="https://www.goodreads.com/book/show/23437156-six-of-crows"><em>Six of Crows</em> </p>
+			</a>
 				<p class="sixofcrowsdescription">"Ketterdam: a bustling hub of international trade where anything can be had for the right price—and no one knows that better than criminal prodigy Kaz Brekker. Kaz is offered a chance at a deadly heist that could make him rich beyond his wildest dreams. But he can’t pull it off alone. . . ."</p>				
 			</div>
 			</div>
@@ -168,7 +189,9 @@
 
 			<div id = "leftbox">
 				<img src="img2/extremeownership.jpeg">
-				<p class="sixofcrowscaption"><em>Extreme Ownership: How US Naval Seals Lead & Win.</em>
+				<a class="a2" href="https://www.goodreads.com/book/show/23848190-extreme-ownership?ref=nav_sb_ss_1_10" target="_blank">
+				<p class="sixofcrowscaption"><em>Extreme Ownership: How US Naval Seals Lead & Win.</em></p>
+			</a>
 				<p class="sixofcrowsdescription">"Extreme Ownership will make you a better leader. In it, Navy SEALs Willink and Babin discuss essential leadership lessons, including practicing extreme ownership, killing your ego, enforcing standards, simplifying, prioritizing, and executing."</p>				
 			</div>
 			</div>
@@ -182,34 +205,60 @@
 		<br>
 			<h2 class="other">Other Books I Have Read:</h2>
 			<ul>
+
+				<li><a class="a2" href="https://www.goodreads.com/book/show/68429.The_Well_of_Ascension?ref=nav_sb_ss_1_16" target="_blank"> Mistborn: The Well of Ascension  &starf; &starf; &starf; &starf; &starf;</a></li>
+
+				<p class="other book descriptions">
+					"***Description contains spoilers for previous book in the series***The impossible has been accomplished. The Lord Ruler—the man who claimed to be god incarnate and brutally ruled the world for a thousand years—has been vanquished. But Kelsier, the hero who masterminded that triumph, is dead too, and now the awesome task of building a new world has been left to his young protégé, Vin, the former street urchin who is now the most powerful Mistborn in the land, and to the idealistic young nobleman she loves."
+				</p>
+
+				<li><a class="a2" href="https://www.goodreads.com/book/show/68428.The_Final_Empire" target="_blank"> Mistborn: The Final Empire  &starf; &starf; &starf; &starf; &starf;</a></li>
+
+				<p class="other book descriptions">
+					"For a thousand years the ash fell and no flowers bloomed. For a thousand years the Skaa slaved in misery and lived in fear. For a thousand years the Lord Ruler, the "Sliver of Infinity," reigned with absolute power and ultimate terror, divinely invincible. Then, when hope was so long lost that not even its memory remained, a terribly scarred, heart-broken half-Skaa rediscovered it in the depths of the Lord Ruler's most hellish prison. Kelsier "snapped" and found in himself the powers of a Mistborn. A brilliant thief and natural leader, he turned his talents to the ultimate caper, with the Lord Ruler himself as the mark."
+				</p>
+
+				<li><a class="a2" href="https://www.goodreads.com/book/show/38714388-the-dichotomy-of-leadership?ref=nav_sb_ss_1_11" target="_blank"> The Dichotomy of Leadership: Balancing the Challenges of Extreme Ownership to Lead and Win  &starf; &starf; &starf; &starf; &starf;</a></li>
+
+				<p class="other book descriptions">
+					"With their first book, Extreme Ownership (published in October 2015), Jocko Willink and Leif Babin set a new standard for leadership, challenging readers to become better leaders, better followers, and better people, in both their professional and personal lives. Now, in THE DICHOTOMY OF LEADERSHIP , Jocko and Leif dive even deeper into the unchartered and complex waters of a concept first introduced in Extreme Ownership : finding balance between the opposing forces that pull every leader in different directions. Here, Willink and Babin get granular into the nuances that every successful leader must navigate."
+				</p>
+
+				<li><a class="a2" href="https://www.goodreads.com/book/show/60321392-the-song-of-the-cell" target="_blank"> The Song of the Cell: An Exploration of Medicine and the New Human  &starf; &starf; &starf; &starf; &starf;</a></li>
+
+				<p class="other book descriptions">
+					"In an account both lyrical and capacious, Mukherjee takes us through an evolution of human understanding: from the seventeenth-century discovery that humans are made up of cells to our cutting-edge technologies for manipulating and deploying cells for therapeutic purposes."
+				</p>
+
+				<li><a class="a2" href="https://www.ynharari.com/book/sapiens-2/" target="_blank"> Sapiens: A Brief History of Humankind  &starf; &starf; &starf; &starf; &star;</a></li>
+
+				<p class="other book descriptions">
+					"Starting from this provocative idea, Sapiens goes on to retell the history of our species from a completely fresh perspective. It explains that money is the most pluralistic system of mutual trust ever devised; that capitalism is the most successful religion ever invented; that the treatment of animals in modern agriculture is probably the worst crime in history; and that even though we are far more powerful than our ancient ancestors, we aren’t much happier."
+				</p>
+
 				<li><a class="a2" href="https://en.wikipedia.org/wiki/Astrophysics_for_People_in_a_Hurry" target="_blank"> Astrophysics for People in a Hurry &starf; &starf; &starf; &starf; &star;</a></li>
 
 				<p class="other book descriptions">
 					"While you wait for your morning coffee to brew, for the bus, the train, or a plane to arrive, Astrophysics for People in a Hurry will reveal just what you need to be fluent and ready for the next cosmic headlines: from the Big Bang to black holes, from quarks to quantum mechanics, and from the search for planets to the search for life in the universe."
-							<br>
-					&nbsp; &nbsp; &nbsp; - &nbsp; Neil de Grasse Tyson
 				</p>
 
 				<li><a class="a2" href="https://www.goodreads.com/book/show/40664707-the-undying" target="_blank"> The Undying &starf; &starf; &starf; &starf; &star;</a></li>
 
 				<p class="other book descriptions">
 					"A week after her forty-first birthday, the acclaimed poet Anne Boyer was diagnosed with highly aggressive triple-negative breast cancer. For a single mother living paycheck to paycheck who had always been the caregiver rather than the one needing care, the catastrophic illness was both a crisis and an initiation into new ideas about mortality and the gendered politics of illness."
-							<br>
-					&nbsp; &nbsp; &nbsp; - &nbsp; Anne Boyer
 				</p>
 
 				<li><a class="a2" href="https://markmanson.net/books/everything-is-fucked" target="_blank"> Everything is Fucked: A Book About Hope &starf; &starf; &starf; &star; &star;</a></li>
 
 				<p class="other book descriptions">
 					"Ever wonder why greater connectivity seems to make everyone just hate each other more? Ever wonder why the news always seems so depressing? Ever wonder why people are seemingly becoming more anxious and miserable despite life getting easier? Well, buckle up bitches, Uncle Mark is taking you for another ride. Just like The Subtle Art of Not Giving a F*ck questioned our conventional wisdom on what makes us happy, Everything Is F*cked: A Book About Hope questions our assumptions on what makes life worth living."
-							<br>
-					&nbsp; &nbsp; &nbsp; - &nbsp; Mark Manson
 				</p>
+				<li><a class="a2" href="https://www.goodreads.com/book/show/29939230-a-conjuring-of-light" target="_blank"> A Conjuring of Light &starf; &starf; &starf; &starf; &star;</a></li>
 				<li><a class="a2" href="https://en.wikipedia.org/wiki/A_Darker_Shade_of_Magic" target="_blank"> A Darker Shade of Magic &starf; &starf; &starf; &star; &star;</a></li>
 				<li><a class="a2" href="https://en.wikipedia.org/wiki/Crooked_Kingdom" target="_blank"> Crooked Kingdom &starf; &starf; &starf; &starf; &star;</a></li>
 				<li><a class = "a2" href="https://awoiaf.westeros.org/index.php/A_Knight_of_the_Seven_Kingdoms" target="_blank">A Knight of the Seven Kingdoms &starf; &starf; &starf; &starf; &star;</a></li>
-				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Feast_for_Crows" target="_blank">A Feast for Crows &starf; &starf; &starf; &starf; &star;</a></li>
-				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Clash_of_Kings" target="_blank">A Clash of Kings &starf; &starf; &starf; &starf; &star;</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Feast_for_Crows" target="_blank">A Feast for Crows &starf; &starf; &starf; &starf; &starf;</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Clash_of_Kings" target="_blank">A Clash of Kings &starf; &starf; &starf; &starf; &starf;</a></li>
 				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Storm_of_Swords" target="_blank">A Storm of Swords &starf; &starf; &starf; &starf; &starf;</a></li>
 				<li><a class = "a2" href="https://en.wikipedia.org/wiki/The_Betrayal_of_Bindy_Mackenzie" target="_blank">Becoming Bindy Mackenzie &starf; &starf; &starf; &star; &star;</a></li>
 				<li><a class = "a2" href="https://en.wikipedia.org/wiki/The_Perks_of_Being_a_Wallflower" target="_blank">The Perks of Being a Wallflower &starf; &starf; &starf; &star; &star;</a></li>
