--- a/quotes.html
+++ b/quotes.html
@@ -8,9 +8,7 @@
 </head>
 <body>
 	<main>
-	<p class= "quotestext">*Still working on this page*</p>
-
-	<p class= "quotestext">“A reader lives a thousand lives before he dies, said Jojen. The man who never reads lives only one."
+ 	<p class= "quotestext">“A reader lives a thousand lives before he dies, said Jojen. The man who never reads lives only one."
 		<br>
 	&nbsp; &nbsp; &nbsp; - &nbsp; George R.R. Martin, <em>A Dance with Dragons</em></p>
 
@@ -233,6 +231,43 @@
 	<p class= "quotestext">“The poor are no less rational than anyone else--quite the contrary. Precisely because they have so little, we often find them putting much careful thought into their choices: they have to be sophisticated economists just to survive."
 		<br>
 	&nbsp; &nbsp; &nbsp; - &nbsp; Abhijit V. Banerjee, <em>Poor Economics</em></p>
+
+
+	<p class= "quotestext">“What is dangerous is not making mistakes, but to be so enamored of one’s point of view that one does not let facts get in the way. To make progress, we have to constantly go back to the facts, acknowledge our errors, and move"
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Abhijit V. Banerjee, <em>Good Economics for Hard Times </em></p>
+
+	<p class= "quotestext">“You could never convince a monkey to give you a banana by promising him limitless bananas after death in monkey heaven."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp;  Yuval Noah Harari, <em> Sapiens: A Brief History of Humankind </em></p>
+
+	<p class= "quotestext">“How do you cause people to believe in an imagined order such as Christianity, democracy or capitalism? First, you never admit that the order is imagined."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp;  Yuval Noah Harari, <em> Sapiens: A Brief History of Humankind </em></p>
+
+	<p class= "quotestext">“How do you cause people to believe in an imagined order such as Christianity, democracy or capitalism? First, you never admit that the order is imagined."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp;  Yuval Noah Harari, <em> Sapiens: A Brief History of Humankind </em></p>
+
+	<p class= "quotestext">“Consistency is the playground of dull minds."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp;  Yuval Noah Harari, <em> Sapiens: A Brief History of Humankind </em></p>
+
+	<p class= "quotestext">“Every action you take is a vote for the type of person you wish to become. No single instance will transform your beliefs, but as the votes build up, so does the evidence of your new identity."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp;  James Clear, <em>Atomic Habits </em></p>
+
+	<p class= "quotestext">“You do not rise to the level of your goals. You fall to the level of your systems."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp;  James Clear, <em>Atomic Habits </em></p>
+
+	<p class= "quotestext">“You should be far more concerned with your current trajectory than with your current results"
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp;  James Clear, <em>Atomic Habits </em></p>
+
+	<p class= "quotestext">“When you fall in love with the process rather than the product, you don’t have to wait to give yourself permission to be happy. You can be satisfied anytime your system is running"
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp;  James Clear, <em>Atomic Habits </em></p>
 
 	<p class = "quotestext">“When you spend your whole life living in a hole, the only way you can go is up.”<br>
 	&nbsp; &nbsp; &nbsp; - &nbsp; Louis Sachar, <em>Holes</em>
